src/objects/Community_Template_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>These settings are used to control some aspects of the Portal Design Template.</description>
    <fields>
        <fullName>Background_ImageID__c</fullName>
        <description>Represents the Document ID that will be displayed on the Background of the Community Portal. The Document must follow the size restrictions outlined and must be marked as &apos;Externally Available Image = TRUE&quot; to be viewable.</description>
        <inlineHelpText>Represents the Document ID that will be displayed on the Background of the Community Portal. The Document must follow the size restrictions outlined and must be marked as &apos;Externally Available Image = TRUE&quot; to be viewable.</inlineHelpText>
        <label>Background ImageID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Scheme__c</fullName>
        <defaultValue>&apos;Green&apos;</defaultValue>
        <label>Color Scheme</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Logo_ImageID__c</fullName>
        <description>Represents the Document ID that will be displayed as the Logo in the Footer of the Community Portal. The Document must follow the size restrictions outlined and must be marked as &apos;Externally Available Image = TRUE&quot; to be viewable.</description>
        <inlineHelpText>Represents the Document ID that will be displayed as the Logo in the Footer of the Community Portal. The Document must follow the size restrictions outlined and must be marked as &apos;Externally Available Image = TRUE&quot; to be viewable.</inlineHelpText>
        <label>Footer Logo ImageID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Logo_ImageID__c</fullName>
        <description>Represents the Document ID that will be displayed in the header of the Community Portal.  The Document must follow the size restrictions outlined and must be marked as &apos;Externally Available Image = TRUE&quot; to be viewable.</description>
        <inlineHelpText>Represents the Document ID that will be displayed in the header of the Community Portal.  The Document must follow the size restrictions outlined and must be marked as &apos;Externally Available Image = TRUE&quot; to be viewable.</inlineHelpText>
        <label>Header Logo ImageID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Page_ImageID__c</fullName>
        <description>Represents the Document ID that will be displayed on the Home Page of the Community Portal. The Document must follow the size restrictions outlined and must be marked as &apos;Externally Available Image = TRUE&quot; to be viewable.</description>
        <inlineHelpText>Represents the Document ID that will be displayed on the Home Page of the Community Portal. The Document must follow the size restrictions outlined and must be marked as &apos;Externally Available Image = TRUE&quot; to be viewable.</inlineHelpText>
        <label>Home Page ImageID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Community Template Settings</label>
</CustomObject>